# LabsAndStuff

Lab_PCB/: CMakeLists.txt  README.md  main_D.cpp  main_S_1.cpp  main_S_2.cpp
Lab_PCB/lib_D/: CMakeLists.txt  Menu.cpp  Menu.h  PCB.cpp  PCB.h
Lab_PCB/lib_S_1/: CMakeLists.txt  Menu.cpp  Menu.h  PCB.cpp  PCB.h
Lab_PCB/lib_S_2/: CMakeLists.txt  Menu.cpp  Menu.h  PCB.cpp  PCB.h
Lab_PCB/tests/: CMakeLists.txt
Lab_PCB/tests/PCB-tests/: CMakeLists.txt  test_D.cpp  test_S_1.cpp  test_S_2.cpp
Lab_TernaryVector/: CMakeLists.txt  Menu.cpp  Menu.h  README.md  TruthTable.cpp  TruthTable.h  Vector.cpp  Vector.h  main.cpp
Lemniscate/lemniscate-tests/: CMakeLists.txt
PetriNet/: CMakeLists.txt  Graph.cpp  Graph.h  aliveGraph.txt  aliveParams.txt  graph.txt  inputParameters.txt  main.cpp
